Fix article slide section non-responsiveness on smaller screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -123,9 +123,6 @@ and altered accordingly to fit this project*/
 .article-row p {
     padding-right: 1rem;
 }
-.article-row a {
-    
-}
 /*-----------------Social-------------*/
 .social-icons {
     font-size: 3rem;
@@ -165,6 +162,9 @@ and altered accordingly to fit this project*/
     }
     .social-row {
         padding: 0;
+    }
+    .review-slide {
+        display: none;
     }
 }
 /*Small (sm) devices (landscape phones, 576px and up)*/
